[gd_scene load_steps=8 format=3 uid="uid://cdjugss3fcdq8"]

[ext_resource type="PackedScene" uid="uid://cclbjlc3hx2lv" path="res://gui/title_label.tscn" id="1_28tfd"]
[ext_resource type="PackedScene" uid="uid://d0d4pvp0xmvo" path="res://gui/icon_button.tscn" id="1_fj4pd"]
[ext_resource type="Script" path="res://gui/in_game_menu_contents.gd" id="1_t7p33"]
[ext_resource type="Texture2D" uid="uid://dh78fywqogscx" path="res://gui/close.svg" id="2_w8rnj"]
[ext_resource type="Shortcut" uid="uid://ctl670m8ewyx" path="res://gui/esc_shortcut.tres" id="3_cieui"]
[ext_resource type="Script" path="res://gui/formatted_label.gd" id="6_i548y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_awepr"]

[node name="Contents" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_t7p33")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseMenuBtn" parent="VBoxContainer/Header" instance=ExtResource("1_fj4pd")]
layout_mode = 2
shortcut = ExtResource("3_cieui")
icon = ExtResource("2_w8rnj")

[node name="Label" parent="VBoxContainer" instance=ExtResource("1_28tfd")]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SettingsBtn" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="CreditsBtn" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="ExitBtn" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Control2" type="Control" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Footer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer2/Footer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VersionLbl" type="Label" parent="VBoxContainer2/Footer"]
layout_mode = 2
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxEmpty_awepr")
text = "version {application/config/version}"
horizontal_alignment = 2
script = ExtResource("6_i548y")

[connection signal="pressed" from="VBoxContainer/Header/CloseMenuBtn" to="." method="_on_close_menu_btn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CreditsBtn" to="." method="_on_credits_btn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitBtn" to="." method="_on_exit_btn_pressed"]
